Added animated background to pages

--- a/index.html
+++ b/index.html
@@ -14,6 +14,21 @@
             <a class="btn" href="/highscores.html">High Scores</a>
         </div>
     </div>
-    
+    <script src="assets/js/bs.js/three.min.js"></script>
+<script src="assets/js/bs.js/vanta.net.min.js"></script>
+<script>
+    VANTA.NET({
+      el: ":root",
+      mouseControls: true,
+      touchControls: true,
+      gyroControls: false,
+      minHeight: 200.00,
+      minWidth: 200.00,
+      scale: 1.00,
+      scaleMobile: 1.00,
+      color: 0xeb5e2b,
+      backgroundColor: 0x252422
+    })
+    </script>
 </body>
 </html>
