--- a/end.html
+++ b/end.html
@@ -12,7 +12,7 @@
             <h1 id="finalScore"></h1>
             <form>
                 <input type="text" name="username" id="username" placeholder="username">
-                <button type="submit" class="btn" id="saveScoreBtn" onclick="saveHighScore(event)" disabled>Save</button>
+                <button type="button" class="btn" id="saveScoreBtn" onclick="saveHighScore(event)" disabled>Save</button>
             </form>
             <a href="/game.html" class="btn">Play Again</a>
             <a href="/" class="btn">Go Home</a>
