Added styling to css

--- a/game.html
+++ b/game.html
@@ -6,6 +6,7 @@
     <title>QuizNest - Play</title>
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/js/game.js">
+    <script src="https://kit.fontawesome.com/bb01f0a43b.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <div class="container">
