--- a/game.html
+++ b/game.html
@@ -66,5 +66,6 @@
       backgroundColor: 0x252422
     })
     </script>
+    <script src="https://cdn.jsdelivr.net/npm/he@1.2.0/he.min.js"></script>
 </body>
 </html>
