--- a/game.html
+++ b/game.html
@@ -3,9 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>QuizNest - Play</title>
+    <title>Play</title>
     <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="stylesheet" href="assets/js/game.js">
     <script src="https://kit.fontawesome.com/bb01f0a43b.js" crossorigin="anonymous"></script>
 </head>
 <body>
