github deployment issue

--- a/end.html
+++ b/end.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Congrats</title>
+    <title>QuizNest</title>
     <link rel="stylesheet" href="assets/css/style.css">
     <script src="https://kit.fontawesome.com/bb01f0a43b.js" crossorigin="anonymous"></script>
 </head>
