--- a/end.html
+++ b/end.html
@@ -15,8 +15,8 @@
                 <input type="text" name="username" id="username" placeholder="username">
                 <button type="button" class="btn" id="saveScoreBtn" onclick="saveHighScore(event)" disabled>Save</button>
             </form>
-            <a href="/game.html" class="btn">Play Again</a>
-            <a href="/" class="btn">Go Home</a>
+            <a href="game.html" class="btn">Play Again</a>
+            <a href="index.html" class="btn">Go Home</a>
         </div>
     </div>
     <script src="assets/js/end.js"></script>
