--- a/end.html
+++ b/end.html
@@ -16,7 +16,7 @@
                 <button type="button" class="btn" id="saveScoreBtn" onclick="saveHighScore(event)" disabled>Save</button>
             </form>
             <a href="game.html" class="btn">Play Again</a>
-            <a href="index.html" class="btn">Go Home</a>
+            <a href="index.html" class="btn">Home</a>
         </div>
     </div>
     <script src="assets/js/end.js"></script>
