--- a/game.html
+++ b/game.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="A fun online quiz to test your knowledge">
+    <meta name="keywords" content="online quiz, quiz, trivia, test, knowledge, challenge, fun, game, interactive, questions, answers, quiz platform">
+    <meta name="author" content="Lee Smith">
     <title>QuizNest</title>
     <link rel="stylesheet" href="assets/css/style.css">
     <script src="https://kit.fontawesome.com/bb01f0a43b.js" crossorigin="anonymous"></script>
