--- a/end.html
+++ b/end.html
@@ -13,7 +13,7 @@
 <body>
     <div class="container">
         <div id="end" class="flex-center flex-column">
-            <h1 id="finalScore"></h1>
+            <h1 id="finalScore">0</h1>
             <form>
                 <input type="text" name="username" id="username" placeholder="username">
                 <button type="button" class="btn" id="saveScoreBtn" onclick="saveHighScore(event)" disabled>Save</button>
