--- a/game.html
+++ b/game.html
@@ -23,7 +23,7 @@
                         <div id="progressBarFull"></div>
                     </div>
                 </div>
-                <div id="hud-item">
+                <div id="hud-item-score">
                     <p class="hud-prefix">
                         Score
                     </p>
