Added to readme and added to html files

--- a/end.html
+++ b/end.html
@@ -21,6 +21,11 @@
             <a href="game.html" class="btn">Play Again</a>
             <a href="index.html" class="btn">Home</a>
         </div>
+        <div class="info-footer">This site was designed by 
+            <a href="https://github.com/leellismith/QuizNest" target="_blank">
+            <i class="fa-brands fa-github" aria-hidden="true"></i> Lee Smith</a> 
+            for MS2 project with Code Institute.
+        </div>
     </div>
     <script src="assets/js/end.js"></script>
     <script src="assets/js/bs.js/three.min.js"></script>
