--- a/highscores.html
+++ b/highscores.html
@@ -17,6 +17,11 @@
           <ul id="highScoresList"></ul>
           <a class="btn" href="index.html">Go Home</a>
         </div>
+        <div class="info-footer">This site was designed by 
+          <a href="https://github.com/leellismith/QuizNest" target="_blank">
+          <i class="fa-brands fa-github" aria-hidden="true"></i> Lee Smith</a> 
+          for MS2 project with Code Institute.
+        </div>
       </div>
     <script src="assets/js/highscores.js"></script>
     <script src="assets/js/bs.js/three.min.js"></script>
