--- a/game.html
+++ b/game.html
@@ -50,6 +50,11 @@
                 <p class="choice-text" data-number="4"></p>
             </div>
         </div>
+        <div class="info-footer">This site was designed by 
+            <a href="https://github.com/leellismith/QuizNest" target="_blank">
+            <i class="fa-brands fa-github" aria-hidden="true"></i> Lee Smith</a> 
+            for MS2 project with Code Institute.
+        </div>
     </div>
     <script src="assets/js/game.js"></script>
     <script src="assets/js/bs.js/three.min.js"></script>
