--- a/index.html
+++ b/index.html
@@ -17,8 +17,15 @@
             <a class="btn" href="game.html">Play</a>
             <a class="btn" href="highscores.html">High Scores</a>
         </div>
+        <div class="info-footer">This site was designed by 
+            <a href="https://github.com/leellismith/QuizNest" target="_blank">
+            <i class="fa-brands fa-github" aria-hidden="true"></i> Lee Smith</a> 
+            for MS2 project with Code Institute.
+        </div>
     </div>
-    <script src="assets/js/bs.js/three.min.js"></script>
+    
+
+        <script src="assets/js/bs.js/three.min.js"></script>
 <script src="assets/js/bs.js/vanta.net.min.js"></script>
 <script>
     VANTA.NET({
@@ -34,5 +41,5 @@
       backgroundColor: 0x252422
     })
     </script>
-</body>
+    </body>
 </html>
