--- a/highscores.html
+++ b/highscores.html
@@ -13,9 +13,9 @@
 <body>
     <div class="container">
         <div id="highScores" class="flex-center flex-column">
-          <h1 id="finalScore">High Scores</h1>
+          <h1 id="finalScore">High Scores</h1> <!--Page heading-->
           <ul id="highScoresList"></ul>
-          <a class="btn" href="index.html">Go Home</a>
+          <a class="btn" href="index.html">Home</a> <!-- Home Button -->
         </div>
         <div class="info-footer">This site was designed by 
           <a href="https://github.com/leellismith/QuizNest" target="_blank">
@@ -24,8 +24,8 @@
         </div>
       </div>
     <script src="assets/js/highscores.js"></script>
-    <script src="assets/js/bs.js/three.min.js"></script>
-<script src="assets/js/bs.js/vanta.net.min.js"></script>
+    <script src="assets/js/bs.js/three.min.js"></script> <!--Script used to add animated background-->
+<script src="assets/js/bs.js/vanta.net.min.js"></script> <!--Script used to add animated background-->
 <script>
     VANTA.NET({
       el: ":root",
@@ -39,6 +39,6 @@
       color: 0xeb5e2b,
       backgroundColor: 0x252422
     })
-    </script>
+    </script> <!--Script used to add animated background-->
 </body>
 </html>
