--- a/game.html
+++ b/game.html
@@ -16,7 +16,7 @@
         <div id="game" class="justify-center flex-column hidden">
             <div id="hud">
                 <div id="hud-item">
-                    <p id="progressText" class="hud-prefix">
+                    <p id="progressText" class="hud-prefix"> <!-- Shows what question you're on-->
                         Question
                     </p>
                     <div id="progressBar">
@@ -27,26 +27,26 @@
                     <p class="hud-prefix">
                         Score
                     </p>
-                    <h1 class="hud-main-text" id="score">
+                    <h1 class="hud-main-text" id="score"> <!--Shows your score-->
                         0    
                     </h1>
                 </div>
             </div>
-            <h2 id="question"></h2>
-            <div class="choice-container">
-                <p class="choice-prefix">A</p>
+            <h2 id="question"></h2> <!-- Placement for API Question-->
+            <div class="choice-container"> 
+                <p class="choice-prefix">A</p> <!-- Answers from API get added to here-->
                 <p class="choice-text" data-number="1"></p>
             </div>
             <div class="choice-container">
-                <p class="choice-prefix">B</p>
+                <p class="choice-prefix">B</p> <!-- Answers from API get added to here-->
                 <p class="choice-text" data-number="2"></p>
             </div>
             <div class="choice-container">
-                <p class="choice-prefix">C</p>
+                <p class="choice-prefix">C</p> <!-- Answers from API get added to here-->
                 <p class="choice-text" data-number="3"></p>
             </div>
             <div class="choice-container">
-                <p class="choice-prefix">D</p>
+                <p class="choice-prefix">D</p> <!-- Answers from API get added to here-->
                 <p class="choice-text" data-number="4"></p>
             </div>
         </div>
@@ -57,8 +57,8 @@
         </div>
     </div>
     <script src="assets/js/game.js"></script>
-    <script src="assets/js/bs.js/three.min.js"></script>
-<script src="assets/js/bs.js/vanta.net.min.js"></script>
+    <script src="assets/js/bs.js/three.min.js"></script> <!--Script used to add animated background-->
+<script src="assets/js/bs.js/vanta.net.min.js"></script> <!--Script used to add animated background-->
 <script>
     VANTA.NET({
       el: ":root",
@@ -72,7 +72,7 @@
       color: 0xeb5e2b,
       backgroundColor: 0x252422
     })
-    </script>
-    <script src="https://cdn.jsdelivr.net/npm/he@1.2.0/he.min.js"></script>
+    </script> <!--Script used to add animated background-->
+    <script src="https://cdn.jsdelivr.net/npm/he@1.2.0/he.min.js"></script> <!--Script used to fix text issue with API-->
 </body>
 </html>
