--- a/index.html
+++ b/index.html
@@ -13,20 +13,20 @@
 <body>
     <div class="container">
         <div id="home" class="flex-center flex-column">
-            <h1>QuizNest</h1>
-            <a class="btn" href="game.html">Play</a>
-            <a class="btn" href="highscores.html">High Scores</a>
+            <h1>QuizNest</h1> <!--Page heading-->
+            <a class="btn" href="game.html">Play</a><!-- Play Button -->
+            <a class="btn" href="highscores.html">High Scores</a><!-- Highscore button -->
         </div>
         <div class="info-footer">This site was designed by 
-            <a href="https://github.com/leellismith/QuizNest" target="_blank">
+            <a href="https://github.com/leellismith/QuizNest" target="_blank"> 
             <i class="fa-brands fa-github" aria-hidden="true"></i> Lee Smith</a> 
             for MS2 project with Code Institute.
         </div>
     </div>
     
 
-        <script src="assets/js/bs.js/three.min.js"></script>
-<script src="assets/js/bs.js/vanta.net.min.js"></script>
+        <script src="assets/js/bs.js/three.min.js"></script> <!--Script used to add animated background-->
+<script src="assets/js/bs.js/vanta.net.min.js"></script> <!--Script used to add animated background-->
 <script>
     VANTA.NET({
       el: ":root",
@@ -40,6 +40,6 @@
       color: 0xeb5e2b,
       backgroundColor: 0x252422
     })
-    </script>
+    </script> <!--Script used to add animated background-->
     </body>
 </html>
